--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,11 @@ export(distKL)
 export(perMarkerKLs)
 export(plotKL)
 export(unidimKLplot)
-import(dplyr)
 import(forrel)
 import(ggplot2)
-import(mispitools)
-import(pedprobr)
-import(radiant.data)
-import(tidyr)
+importFrom(dplyr,mutate)
+importFrom(magrittr,"%>%")
+importFrom(mispitools,getfreqs)
+importFrom(pedprobr,oneMarkerDistribution)
+importFrom(radiant.data,rownames_to_column)
+importFrom(tidyr,gather)
