--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,15 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
-URL: https://github.com/MarsicoFL/fbnet
+RoxygenNote: 7.2.3
+URL: https://github.com/MarsicoFL/forensIT
 Imports: 
     ggplot2,
     mispitools,
     forrel,
     pedprobr,
     dplyr,
-    tidyr
+    tidyr,
+    magrittr,
+    fbnet (<= 1.0.1)
+
