--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/MarsicoFL/forensIT
 Imports: 
     ggplot2,
     mispitools,
@@ -25,5 +24,13 @@ Imports:
     dplyr,
     tidyr,
     magrittr,
-    fbnet (<= 1.0.1)
-
+    fbnet (<= 1.0.1), 
+    foreach,
+    hrbrthemes,
+    gtools,
+    pedtools, 
+    radiant.data, 
+    reshape2,
+    iterators,
+    doParallel,
+    paramlink
