--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ export(convertPed)
 export(distKL)
 export(elimLangeGoradia)
 export(exportPed)
+export(genotypeProbTable)
 export(genotypeProbTable_FM)
 export(genotypeProbs)
+export(getAllelesFromGenotypes)
 export(index2Genotypes2)
 export(index2Genotypes2.pedtools)
 export(perMarkerKLs)
