--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,6 @@ export(simTestIDMarkers)
 export(strsplit2)
 export(trioCheckFast)
 export(unidimKLplot)
-import(doSNOW)
 import(forrel)
 import(ggplot2)
 import(iterators)
@@ -35,7 +34,6 @@ importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,mutate)
 importFrom(fbnet,buildBN)
 importFrom(fbnet,buildCPTs)
-importFrom(fbnet,initBN)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graphics,abline)
@@ -47,6 +45,7 @@ importFrom(gtools,combinations)
 importFrom(hrbrthemes,theme_ipsum)
 importFrom(magrittr,"%>%")
 importFrom(mispitools,getfreqs)
+importFrom(paramlink,linkdat)
 importFrom(pedprobr,oneMarkerDistribution)
 importFrom(radiant.data,rownames_to_column)
 importFrom(reshape2,melt)
